# VoltMeter

./: .gitignore  CMakeLists.txt  README.md  VoltMeter.h  VoltMeter.rc  VoltMeter.sln  VoltMeter.vcxproj  VoltMeter.vcxproj.filters  VoltMeterDlg.cpp  VoltMeterDlg.h  VoltMeterSession.cpp  VoltMeterSession.h  resource.h  simulateMCU.py
Forms/: MySensorApp.cpp  MySensorApp.h  qvoltmeter.cpp  qvoltmeter.h  qvoltmeter.ui
include/: MCUSession.h  Resource.h  SQLHandler.h  SQLVoltRecord.h  SessionHandler.h  VoltMeterDlg.h  VoltMeterSession.h
res/: VoltMeter.rc2
src/: MCUSession.cpp  SQLHandler.cpp  SessionHandler.cpp  VoltMeter.cpp  VoltMeter.rc  VoltMeterDlg.cpp  VoltMeterSession.cpp  main.cpp
test/: testCase.cpp
